fix: show persisted kills on join (send SCORES after WELCOME) + add AuthManager.getKills()